# R3D_Engine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitignore.orig  .mega-linter.yml  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkStorageLoader.cpp  ChunkStorageLoader.h  Config.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  GameState.h  Graphics.h  Material.cpp  Material.h  Math.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PerlinNoise.cpp  PerlinNoise.h  Player.cpp  Player.h  R3D_Engine.sln  R3D_Vulkan_Engine.sln  README.md  Renderer.cpp  Renderer.h  (+25 more)
.github/workflows/: build.yml  gcc-build.yml  linter.yml  main.yml
Engine/: CMakeLists.txt  Camera.cpp  ClassDiagram.cd  ConsoleUI.cpp  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  GameObject.h  Graphics.h  Logger.cpp  Logger.h  Material.h  Mesh.cpp  Mesh.h  Player.cpp  Player.h  Renderer.cpp  Scene.cpp  Scene.h  Source.cpp  Texture.h  Voxel.h  VulkanCommandBuffer.cpp  VulkanCommandPool.cpp  VulkanDescriptor.h  VulkanDevice.h  VulkanPipeline.cpp  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSwapchain.cpp  VulkanSwapchain.h  Window.cpp  Window.h  errors.h  log_type.h  settings.h  version.h
Engine/Includes/: Engine.h  Logger.h  Window.h
Engine/Includes/camera/: Camera.h  Controller.h
Engine/Includes/graphics/: CameraUBO.h  Geometry.h  Graphics.h  Math.h  SceneUBO.h  Shaders.h  Vertex.h
Engine/Includes/renderer/: Renderer.h  VulkanCommandPool.h  VulkanDescriptor.h  VulkanDevice.h  VulkanInstance.h  VulkanPipeline.h  VulkanRenderPass.h
Engine/Includes/world/: GameObject.h  Mesh.h  (+5 more)
Engine/cameras/: Camera.cpp  Camera.h  Controller.cpp  Controller.h  Player.cpp
Engine/graphics/: Config.h  Geometry.h  Graphics.h  LightProperties.h  Math.cpp  Math.h  Shaders.h  Vertex.h
Engine/renderer/: Renderer.cpp  Renderer.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSwapchain.cpp  VulkanSwapchain.h  callback.cpp  callback.h  extensions.h  frame.h  helper.cpp  helper.h  ihardware.h  interface.h  iswapchain.h  parameters.h  pipeline.cpp  pipeline.h  queue_family.h  render.h  swapchain_details.h  vbuffer.cpp  vbuffer.h  vcommandbuffer.cpp  vcommandbuffer.h  vdescriptorset.cpp  (+21 more)
Engine/ui/: ConsoleUI.cpp  ConsoleUI.h  ObjectsViewer.cpp  ObjectsViewer.h  UI.cpp  UI.h  Watcher.cpp  Watcher.h
Engine/world/: GameObject.cpp  GameObject.h  Geometry.h  LightObject.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h
ExampleCube/: CMakeLists.txt  ExampleCube.vcxproj  main.cpp
MovingLight/: LightMenu.cpp  LightMenu.h  MovingLight.vcxproj  MovingLight.vcxproj.filters  main.cpp
NormalMap/: NormalMap.vcxproj  main.cpp
R3DVoxel/: Application.cpp  Application.h  R3DVoxel.vcxproj  R3DVoxel.vcxproj.filters  WorldMenu.cpp  WorldMenu.h  image.ppm
R3DVoxel/VoxelEngine/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Cube.h  TerrainGenerator.cpp  TerrainGenerator.h  Voxel.h
R3DVoxel/utils/: perlin.cpp  perlin.h  thread_pool.cpp  thread_pool.hpp
Vulkan_Game_Dev/: Application.cpp  Application.h  Barrier.cpp  Barrier.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Common.h  DepthRessources.cpp  DepthRessources.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Device.h  FrameBuffer.cpp  FrameBuffer.h  Graphics.cpp  Graphics.h  Init_Instance.cpp  Init_Instance.h  Instance.cpp  Instance.h  LoadModel.cpp  LoadModel.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  Render.cpp  Render.h  RenderPass.cpp  RenderPass.h  Sampler.cpp  (+36 more)
Vulkan_Game_Dev/Vulkan_elman_pc/: vc141.idb
Vulkan_Game_Dev/shader/: shader.frag  shader.vert
Vulkan_Game_Dev/shaders/: frag.spv  shader.frag
assets/shaders/: no_texture_shader.spv  normalmap.spv  texture_shader.spv  vert.spv
release_2/: R3D_Vulkan_Engine.ipdb  Vulkan_Game_Dev.ipdb
script/: setup.bat
shaders/: shader.frag  shader.vert
(+27 files in other folders)
